# MusicPlayer

./: AnimationButton.cpp  AnimationButton.h  CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  ImageLabel.cpp  ImageLabel.h  MainWidget.cpp  MainWidget.h  PlayList.cpp  PlayList.h  PlayListContentView.cpp  PlayListContentView.h  PlayListItem.cpp  PlayListItem.h  PlayListView.cpp  PlayListView.h  PlayerBar.cpp  PlayerBar.h  ProgressBar.cpp  ProgressBar.h  SelectBar.cpp  SelectBar.h  SongSheetList.cpp  SongSheetList.h  TitleBar.cpp  TitleBar.h  main.cpp  mainwindow.cpp  mainwindow.h  src.qrc
DataInfo/: BaseInfo.h  MusicInfo.h  PlayListInfo.h
Dtos/: BaseDto.h  MusicDto.h  PlayListDto.h  PlayListItemDto.cpp  PlayListItemDto.h  PlayingRecordDto.cpp  PlayingRecordDto.h  UserDto.h
Model/: Base.h  Music.h  PlayList.h  PlayListItem.cpp  PlayListItem.h  User.h
Service/: BaseService.cpp  BaseService.h  DataBaseSerice.cpp  DataBaseSerice.h  DataBaseService.cpp  DataBaseService.h  IBaseService.h  IMusicInfoService.h  MusicInfoService.cpp  MusicInfoService.h  MusicService.cpp  MusicService.h  PlayListInfoService.cpp  PlayListInfoService.h  PlayListItemService.cpp  PlayListItemService.h  PlayListService.cpp  PlayListService.h  PlayerController.cpp  PlayerController.h  PlayingListManager.cpp  PlayingListManager.h  PlayingRecordService.cpp  PlayingRecordService.h  Response.h  UserService.cpp  UserService.h
UI/: CentralWidget.cpp  CentralWidget.h  ClickedEventFilter.h  ImageLabel.cpp  IndexPlayListItem.cpp  IndexPlayListItem.h  IndexWidget.cpp  IndexWidget.h  MainWidget.cpp  MainWidget.h  MoreMenu.cpp  MoreMenu.h  PlayList.cpp  PlayList.h  PlayListContentView.cpp  PlayListContentView.h  PlayListEditor.cpp  PlayListEditor.h  PlayListItem.cpp  PlayListItem.h  PlayListView.cpp  PlayListView.h  PlayerBar.cpp  PlayerBar.h  SelectBar.cpp  SidePlayList.cpp  SidePlayList.h  SidePlayListBar.cpp  SidePlayListBar.h  SidePlayListItem.cpp  SidePlayListItem.h  TitleBar.cpp  TitleBar.h  ToolButton.cpp  ToolButton.h  mainwindow.h
lib/taglib/lib/cmake/taglib/: taglib-targets-noconfig.cmake  taglib-targets.cmake
lib/taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
qss/: styles.qss
scr/db/: db.db
